Refactor namespaces and project structure

--- a/src/MySpot.Api/MySpot.Api.csproj
+++ b/src/MySpot.Api/MySpot.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -9,6 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MySpot.Application\MySpot.Application.csproj" />
+    <ProjectReference Include="..\..\MySpot.Core\MySpot.Core.csproj" />
+    <ProjectReference Include="..\..\MySpot.Infrastructure\MySpot.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
