--- a/src/MySpot.Api/MySpot.Api.csproj
+++ b/src/MySpot.Api/MySpot.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,14 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MySpot.Application\MySpot.Application.csproj" />
-    <ProjectReference Include="..\..\MySpot.Core\MySpot.Core.csproj" />
-    <ProjectReference Include="..\..\MySpot.Infrastructure\MySpot.Infrastructure.csproj" />
+    <ProjectReference Include="..\MySpot.Application\MySpot.Application.csproj" />
+    <ProjectReference Include="..\MySpot.Core\MySpot.Core.csproj" />
+    <ProjectReference Include="..\MySpot.Infrastructure\MySpot.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
